--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-chatgpt-playground",
+  "name": "chatgpt-chatbot-bootstrap",
   "version": "0.1.0",
   "private": true,
   "scripts": {
